--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "async-mutex": "^0.5.0",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
