--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,11 @@
 {
+    "version": 2,
+
     "rewrites": [
         {
             "source": "/(.*)",
             "destination": "/"
         }
-    ],
-    "framework": null,
-    "installCommand": null,
-    "buildCommmand": "",
-    "outputDirectory": "public"
+    ]
+   
 }
