--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-jwt": "^8.4.1",
     "express-session": "^1.18.1",
     "html-escaper": "^3.0.3",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.0",
