--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon --ext .js,ejs,json,html --watch . --watch views --watch public app.js",
+    "build":"",
     "test": "mocha"
   },
   "keywords": [],
