--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "express-jwt": "^8.4.1",
     "express-session": "^1.18.1",
     "html-escaper": "^3.0.3",
+    "imap": "^0.8.19",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "mailparser": "^3.7.2",
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.0",
     "multer": "^1.4.5-lts.1",
